# pyproc

./: .gitignore  .gitlab-ci.yml  .travis.yml  AGENT_SYSTEM_PROMPT.md  CHANGELOG.md  LICENSE  Makefile  README.md  bump.py  pyproc-mcp.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pages.yml  pyproc-pypi.yml  test.yml
docs/: .nojekyll  api.html  cli.html  client-setup.html  configuration.html  documentation.html  index.html  mcp-server.html  mcp-setup.html  satudata.html
docs/assets/: README_ASSET_PROMPTS.md  style.css
plan/: API_AND_CLI_WRAPPER_OPTIMIZATION_PLAN.md  PYPROC_MCP_REBRAND_AND_IMPLEMENTATION_PLAN.md  SEARCH_INDEX_LIMIT_REMOVAL_AND_PROGRESS.md
pypro/: exceptions.py  lpse.py
pyproc/: __init__.py  cache.py  cli.py  exceptions.py  helpers.py  kategori.py  lpse.py  text.py  user_agents.py  utils.py
pyproc/mcp/: __init__.py  errors.py  hosts.py  http_server.py  parallel.py  resources.py  schemas.py  search_index.py  server.py  tools.py
scripts/: downloader.py  https_lpse_jakarta_go_id.idx  text.py
test/: test_lpse.py
tests/: .gitignore  test_cache.py  test_cli_unit.py  test_downloader.py  test_lpse.py  test_lpse_unit.py  test_mcp_hosts.py  test_mcp_schemas.py  test_mcp_search_index.py  test_mcp_tools.py  test_user_agents.py  test_utils_unit.py
tests/fixtures/: README.md  darurat_pemenang.html  darurat_pengumuman.html  dt_darurat_list.json  dt_lelang.json  dt_lelang_data_only.json  dt_nonspk.json  dt_swakelola.json  error_page.html  hasil_evaluasi.html  jadwal.html  lelang_page.html  nonspk_pemenang_berkontrak.html  nonspk_pemenang_bug_10941898000.html  nonspk_pengumuman.html  not_found_page.html  pemenang.html  pengumuman_lelang.html  peserta.html  swakelola_pelaksana.html  swakelola_pengumuman.html
tests/supporting_files/: hasil_evaluasi_nama_npwp_test.txt  list-host-with-filename.txt  list-host.txt
