[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproc"
version = "0.3.2"
authors = [
    { name="Agung Pratama", email="workwithagung@gmail.com"}
]
description = "MCP tools for real-time Indonesian public procurement data from SPSE/Inaproc"
keywords = ["mcp", "procurement", "indonesia", "spse", "inaproc", "lpse", "llm", "ai-agent"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Utilities',
    'Natural Language :: English',
    'Natural Language :: Indonesian',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: MIT License'
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests",
    "beautifulsoup4",
    "html5lib",
    "backoff"
]

[project.optional-dependencies]
test = ["pytest"]
mcp = ["mcp"]

[project.urls]
Homepage = "https://github.com/wakataw/pyproc"
Issues = "https://github.com/wakataw/pyproc/issues"

[project.scripts]
pyproc = "pyproc.cli:main"
pyproc-mcp = "pyproc.mcp.server:main"
